--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@9.0.4",
-  "description": "Easy to use unocss",
+  "description": "Make using UnoCSS simpler and easier.",
   "author": "XioDone",
   "license": "MIT",
   "homepage": "https://github.com/XioDone/unoist#readme",
@@ -15,13 +15,17 @@
     "url": "https://github.com/XioDone/unoist/issues"
   },
   "keywords": [
+    "uno",
+    "unoist",
     "unocss",
     "unocss utils",
     "unocss helper",
     "atomic-css",
     "atomic-css-engine",
     "tailwind",
-    "windicss"
+    "windicss",
+    "unocss-preset",
+    "ui"
   ],
   "exports": {
     ".": {
@@ -50,16 +54,12 @@
   "peerDependencies": {
     "vite": ">=4.0.0"
   },
-  "dependencies": {
-    "clipboardy": "^4.0.0",
-    "consola": "^3.2.3",
-    "uqr": "^0.1.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
     "@types/node": "^20.12.7",
     "bumpp": "^9.4.0",
-    "eslint": "^9.0.0",
+    "eslint": "^9.1.0",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.1",
     "tsup": "^8.0.2",
