--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@unocss/reset": "^0.59.4",
+    "@vercel/analytics": "^1.2.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "unoist": "workspace:*",
     "unplugin-auto-import": "^0.17.5",
