--- a/example/package.json
+++ b/example/package.json
@@ -2,19 +2,19 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "bun --bun vite",
+    "build": "bun --bun vite build",
+    "preview": "bun --bun vite preview"
   },
   "devDependencies": {
-    "@unocss/reset": "^0.59.4",
-    "@vercel/analytics": "^1.2.2",
+    "@unocss/reset": "^0.61.3",
+    "@vercel/analytics": "^1.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "unoist": "workspace:*",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.2",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.3.3",
     "vite-plugin-url-copy": "latest",
-    "vue": "^3.4.23"
+    "vue": "^3.4.31"
   }
 }
