--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unoist",
   "type": "module",
   "version": "0.0.3",
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.5.0",
   "description": "Make using UnoCSS simpler and easier.",
   "author": "XioDone",
   "license": "MIT",
@@ -49,11 +49,12 @@
     "release": "bumpp && npm publish",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "c": "rm pnpm-lock.yaml package-lock.json & rm -rf node_modules dist example/node_modules"
+    "up": "bunx taze latest -rI",
+    "c": "rm -rf node_modules dist example/node_modules pnpm-lock.yaml package-lock.json"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.2",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
     "bumpp": "^9.4.1",
     "eslint": "^9.6.0",
     "lint-staged": "^15.2.7",
@@ -61,7 +62,7 @@
     "tsup": "^8.1.0",
     "typescript": "^5.5.3",
     "unbuild": "^2.0.0",
-    "unocss": "^0.61.0",
+    "unocss": "^0.61.3",
     "vite-plugin-url-copy": "latest"
   },
   "simple-git-hooks": {
