--- a/example/package.json
+++ b/example/package.json
@@ -2,19 +2,19 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun --bun vite",
-    "build": "bun --bun vite build",
-    "preview": "bun --bun vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@unocss/reset": "^0.61.5",
+    "@unocss/reset": "^0.63.4",
     "@vercel/analytics": "^1.3.1",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue": "^5.1.4",
     "unoist": "workspace:*",
-    "unplugin-auto-import": "^0.18.0",
-    "unplugin-vue-components": "^0.27.3",
-    "vite": "^5.3.4",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.9",
     "vite-plugin-url-copy": "latest",
-    "vue": "^3.4.33"
+    "vue": "^3.5.12"
   }
 }
